--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,17 @@ set(CMAKE_CXX_STANDARD 17)
 project(hello LANGUAGES CXX)
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/googletest/googletest/include)
 
 file(GLOB_RECURSE srcs CONFIGURE_DEPENDS src/*.cpp)
 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/googletest)
+
 add_executable(main main.cpp ${srcs})
+
+target_link_libraries(
+  main
+  gtest_main
+)
+
+enable_testing()
